--- a/index.html
+++ b/index.html
@@ -124,19 +124,34 @@
         <ul class="job-page list">
           <li class="job-page__item">
             <div class="work-text-box">
-              <img class="work__image" src="./images/box-1.jpg" alt="design" width="370" height="294" />
+              <picture>
+                <source srcset="./images/desktop/image-job/job.jpg 1x, ./images/desktop/image-job/job-2@2x.jpg  2x"
+                media="(min-with: 1200px)">
+                <img class="work__image" src="./images/desktop/image-job/job.jpg" alt="design"/> 
+              </picture>
               <p class="work__title">Десктопні додатки</p>
             </div>
           </li>
           <li class="job-page__item">
             <div class="work-text-box">
-              <img class="work__image" src="./images/box-2.jpg" alt="styling" width="370" height="294" />
+              <picture>
+                <source
+
+                />
+                <img class="work__image" src="./images/box-2.jpg" alt="styling"/>
+              </picture>
               <p class="work__title">Мобільні додатки</p>
             </div>
           </li>
           <li class="job-page__item">
             <div class="work-text-box">
-              <img class="work__image" src="./images/box-3.jpg" alt="color" width="370" height="294" />
+              <picture>
+                <source
+
+                />
+                <img class="work__image" src="./images/box-3.jpg" alt="color"/>  
+              </picture>
+            
               <p class="work__title">Дизайнерські рішення</p>
             </div>
           </li>
