--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
           </li>
         </ul>
       </nav>
+      <button type="button" class="open-mobile-menu-btn" data-menu-open>
+        <svg class="open-mobile-menu__icon" width="40px" height="40px">
+          <use href="./symbol-defs.svg#icon-menu"></use>
+        </svg>
+      </button>
 
       <ul class="list-contact list">
         <li class="mail__item page-cont">
@@ -50,18 +55,42 @@
         </li>
       </ul>
     </div>
+    <div class="mobile-menu is-open" data-menu>
+      <div class="container mobile-menu__container">
+        <button type="button" class="mobile-menu__close-btn" data-menu-close>
+          <svg class="mobile-menu__close-icon" width="40px" height="40px">
+            <use href="./symbol-defs.svg#icon-close"></use>
+          </svg>
+        </button>
+        <ul class="mobile-menu__list list">
+          <li class="mobile-menu__item"><a class="mobile-menu__link link" href="index.html"><span class="accent">Студія</span></a></li>
+          <li class="mobile-menu__item"><a class="mobile-menu__link link" href="portfolio.html">Портфоліо</a></li>
+          <li class="mobile-menu__item"><a class="mobile-menu__link link" href="#contacts">Контакти</a></li>
+        </ul>
+        <ul class="mobile-menu__contact list">
+          <li class="mobile-menu__contact-item"><a class="mobile-menu__contact-phone link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="mobile-menu__contact-item"><a class="mobile-menu__contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        </ul>
+        <ul class="mobile-menu__contact-list list">
+          <li class="mobile-menu__contact-items"><a class="mobile-menu__contact-network link" href="https://www.instagram.com/">Instagram</a></li>
+          <li class="mobile-menu__contact-items"><a class="mobile-menu__contact-network link" href="https://twitter.com">Twitter</a></li>
+          <li class="mobile-menu__contact-items"><a class="mobile-menu__contact-network link" href="https://www.facebook.com/">Facebook</a></li>
+          <li class="mobile-menu__contact-items"><a class="mobile-menu__contact-network link" href="https://ua.linkedin.com/">LinkedIn</a></li>
+        </ul>
+      </div>
+    </div>
   </header>
   <!-- Main-page -->
   <main class="main-page">
-    <section class="modal-section">
+    <!-- <section class="modal-section">
       <div class="container modals">
         <h1 class="modals__page">Ефективні рішення для вашого бізнесу</h1>
         <button class="modal-open-btn" type="button" data-modal-open>
           Замовити послугу
         </button>
       </div>
-    </section>
-    <section class="portfolio-section section">
+    </section> -->
+    <!-- <section class="portfolio-section section">
       <div class="container skills">
         <h2 class="soft-skills visually-hidden">Наші особливості</h2>
         <ul class="list skills__list">
@@ -117,8 +146,8 @@
           </li>
         </ul>
       </div>
-    </section>
-    <section class="page-job section">
+    </section> -->
+    <!-- <section class="page-job section">
       <div class="container">
         <h2 class="job">Чим ми займаємося</h2>
         <ul class="job-page list">
@@ -373,9 +402,9 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
   </main>
-  <footer class="footer-page">
+  <!-- <footer class="footer-page">
     <div class="container footer-container">
       <div class="contact">
         <a class="logo-two link" href="/index.html"><span class="logo-item">Web</span>Studio</a>
@@ -443,9 +472,9 @@
         </form>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
-  <div class="backdrop is-hidden" data-modal>
+  <!-- <div class="backdrop is-hidden" data-modal>
     <div class="modal">
       <button type="button" class="modal-close__btn" data-modal-close>
         <svg class="modal-close__icon" width="18" height="18">
@@ -499,9 +528,10 @@
         <button type="submit" class="modal-form__submit">Відправити</button>
       </form>
     </div>
-  </div>
+  </div> -->
 
-  <script src="./js/modal.js"></script>
+  <!-- <script src="./js/modal.js"></script> -->
+  <script src="./js/menu.js"></script>
 </body>
 
 </html>
