--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <body>
   <!-- Header-page -->
   <header class="page-header">
-    <div class="header-box container">
+    <div class="container">
+      <div class="header-box">
+
       <nav class="page-navigation">
         <a class="logo link" href="/index.html"><span class="logo-item">Web</span>Studio</a>
         <ul class="menu list">
@@ -78,18 +80,21 @@
           <li class="mobile-menu__contact-items"><a class="mobile-menu__contact-network link" href="https://ua.linkedin.com/">LinkedIn</a></li>
         </ul>
       </div>
+      </div>
     </div>
   </header>
   <!-- Main-page -->
   <main class="main-page">
-    <!-- <section class="modal-section">
-      <div class="container modals">
-        <h1 class="modals__page">Ефективні рішення для вашого бізнесу</h1>
-        <button class="modal-open-btn" type="button" data-modal-open>
-          Замовити послугу
-        </button>
+    <section class=" container">
+      <div class="modal-section">
+        <div class="modals">
+          <h1 class="modals__page">Ефективні рішення для вашого бізнесу</h1>
+          <button class="modal-open-btn" type="button" data-modal-open>
+            Замовити послугу
+          </button>
+        </div>
       </div>
-    </section> -->
+    </section>
     <!-- <section class="portfolio-section section">
       <div class="container skills">
         <h2 class="soft-skills visually-hidden">Наші особливості</h2>
