--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
           </button>
         </div>
       </div>
-    </section>
-    <!-- <section class="portfolio-section section">
+    </section> 
+    <section class="portfolio-section section">
       <div class="container skills">
         <h2 class="soft-skills visually-hidden">Наші особливості</h2>
         <ul class="list skills__list">
@@ -151,7 +151,7 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
     <!-- <section class="page-job section">
       <div class="container">
         <h2 class="job">Чим ми займаємося</h2>
