--- a/index.html
+++ b/index.html
@@ -86,14 +86,12 @@
   <!-- Main-page -->
   <main class="main-page">
     <section class=" container">
-      <div class="modal-section">
-        <div class="modals">
+        <div class="modal-section modals">
           <h1 class="modals__page">Ефективні рішення для вашого бізнесу</h1>
           <button class="modal-open-btn" type="button" data-modal-open>
             Замовити послугу
           </button>
         </div>
-      </div>
     </section> 
     <section class="portfolio-section section">
       <div class="container skills">
