--- a/index.html
+++ b/index.html
@@ -519,24 +519,23 @@
         <p class="subscribe__title">Підпишіться на розсилку</p>
         <form class="subscribe-form">
           <div class="subscribe-form__box">
-            <span class="subscribe-form__wrapper">
               <label class="subscribe-form__field">
                   <input type="text" class="subscribe-form__input" name="user-mail" placeholder="E-mail">          
               </label>
-            </span>
+            </div>
             <button type="submit" class="subscribe-form__submit">Підписатися
               <svg class="subscribe-form__icon" width="24" height="24">
                 <use href="./symbol-defs.svg#icon-send"></use>
               </svg>
             </button>
-          </div>
+
 
         </form>
       </div>
     </div>
   </footer>
 
-  <!-- <div class="backdrop is-hidden" data-modal>
+  <div class="backdrop is-hidden" data-modal>
     <div class="modal">
       <button type="button" class="modal-close__btn" data-modal-close>
         <svg class="modal-close__icon" width="18" height="18">
@@ -590,9 +589,9 @@
         <button type="submit" class="modal-form__submit">Відправити</button>
       </form>
     </div>
-  </div> -->
+  </div>
 
-  <!-- <script src="./js/modal.js"></script> -->
+  <script src="./js/modal.js"></script>
   <script src="./js/menu.js"></script>
 </body>
 
