--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="uk">
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -19,80 +20,87 @@
     <div class="container">
       <div class="header-box">
 
-      <nav class="page-navigation">
-        <a class="logo link" href="/index.html"><span class="logo-item">Web</span>Studio</a>
-        <ul class="menu list">
-          <li class="menu__item">
-            <a class="menu__link link" href="index.html"><span class="accent">Студія</span></a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link link" href="portfolio.html">Портфоліо</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link link" href="#contacts">Контакти</a>
-          </li>
-        </ul>
-      </nav>
-      <button type="button" class="open-mobile-menu-btn" data-menu-open>
-        <svg class="open-mobile-menu__icon" width="40px" height="40px">
-          <use href="./symbol-defs.svg#icon-menu"></use>
-        </svg>
-      </button>
-
-      <ul class="list-contact list">
-        <li class="mail__item page-cont">
-          <a class="mail__link link focus-cont" href="mailto:info@devstudio.com">
-            <svg class="mail__icon cont-icon" width="16px" height="12px">
-              <use href="./symbol-defs.svg#icon-envelope"></use>
-            </svg>
-            info@devstudio.com
-          </a>
-        </li>
-        <li class="phone__item page-cont">
-          <a class="phone__link link focus-cont" href="tel:+380961111111">
-            <svg class="phone__icon cont-icon" width="10" height="16">
-              <use href="./symbol-defs.svg#icon-Vector"></use>
-            </svg>
-            +38 096 111 11 11</a>
-        </li>
-      </ul>
-    </div>
-    <div class="mobile-menu is-open" data-menu>
-      <div class="container mobile-menu__container">
-        <button type="button" class="mobile-menu__close-btn" data-menu-close>
-          <svg class="mobile-menu__close-icon" width="40px" height="40px">
-            <use href="./symbol-defs.svg#icon-close"></use>
+        <nav class="page-navigation">
+          <a class="logo link" href="/index.html"><span class="logo-item">Web</span>Studio</a>
+          <ul class="menu list">
+            <li class="menu__item">
+              <a class="menu__link link" href="index.html"><span class="accent">Студія</span></a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link link" href="portfolio.html">Портфоліо</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link link" href="#contacts">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <button type="button" class="open-mobile-menu-btn" data-menu-open>
+          <svg class="open-mobile-menu__icon" width="40px" height="40px">
+            <use href="./symbol-defs.svg#icon-menu"></use>
           </svg>
         </button>
-        <ul class="mobile-menu__list list">
-          <li class="mobile-menu__item"><a class="mobile-menu__link link" href="index.html"><span class="accent">Студія</span></a></li>
-          <li class="mobile-menu__item"><a class="mobile-menu__link link" href="portfolio.html">Портфоліо</a></li>
-          <li class="mobile-menu__item"><a class="mobile-menu__link link" href="#contacts">Контакти</a></li>
-        </ul>
-        <ul class="mobile-menu__contact list">
-          <li class="mobile-menu__contact-item"><a class="mobile-menu__contact-phone link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-          <li class="mobile-menu__contact-item"><a class="mobile-menu__contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        </ul>
-        <ul class="mobile-menu__contact-list list">
-          <li class="mobile-menu__contact-items"><a class="mobile-menu__contact-network link" href="https://www.instagram.com/">Instagram</a></li>
-          <li class="mobile-menu__contact-items"><a class="mobile-menu__contact-network link" href="https://twitter.com">Twitter</a></li>
-          <li class="mobile-menu__contact-items"><a class="mobile-menu__contact-network link" href="https://www.facebook.com/">Facebook</a></li>
-          <li class="mobile-menu__contact-items"><a class="mobile-menu__contact-network link" href="https://ua.linkedin.com/">LinkedIn</a></li>
+
+        <ul class="list-contact list">
+          <li class="mail__item page-cont">
+            <a class="mail__link link focus-cont" href="mailto:info@devstudio.com">
+              <svg class="mail__icon cont-icon" width="16px" height="12px">
+                <use href="./symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
+          </li>
+          <li class="phone__item page-cont">
+            <a class="phone__link link focus-cont" href="tel:+380961111111">
+              <svg class="phone__icon cont-icon" width="10" height="16">
+                <use href="./symbol-defs.svg#icon-Vector"></use>
+              </svg>
+              +38 096 111 11 11</a>
+          </li>
         </ul>
       </div>
+      <div class="mobile-menu is-open" data-menu>
+        <div class="container mobile-menu__container">
+          <button type="button" class="mobile-menu__close-btn" data-menu-close>
+            <svg class="mobile-menu__close-icon" width="40px" height="40px">
+              <use href="./symbol-defs.svg#icon-close"></use>
+            </svg>
+          </button>
+          <ul class="mobile-menu__list list">
+            <li class="mobile-menu__item"><a class="mobile-menu__link link" href="index.html"><span
+                  class="accent">Студія</span></a></li>
+            <li class="mobile-menu__item"><a class="mobile-menu__link link" href="portfolio.html">Портфоліо</a></li>
+            <li class="mobile-menu__item"><a class="mobile-menu__link link" href="#contacts">Контакти</a></li>
+          </ul>
+          <ul class="mobile-menu__contact list">
+            <li class="mobile-menu__contact-item"><a class="mobile-menu__contact-phone link"
+                href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="mobile-menu__contact-item"><a class="mobile-menu__contact-mail link"
+                href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          </ul>
+          <ul class="mobile-menu__contact-list list">
+            <li class="mobile-menu__contact-items"><a class="mobile-menu__contact-network link"
+                href="https://www.instagram.com/">Instagram</a></li>
+            <li class="mobile-menu__contact-items"><a class="mobile-menu__contact-network link"
+                href="https://twitter.com">Twitter</a></li>
+            <li class="mobile-menu__contact-items"><a class="mobile-menu__contact-network link"
+                href="https://www.facebook.com/">Facebook</a></li>
+            <li class="mobile-menu__contact-items"><a class="mobile-menu__contact-network link"
+                href="https://ua.linkedin.com/">LinkedIn</a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </header>
   <!-- Main-page -->
   <main class="main-page">
     <section class=" container">
-        <div class="modal-section modals">
-          <h1 class="modals__page">Ефективні рішення для вашого бізнесу</h1>
-          <button class="modal-open-btn" type="button" data-modal-open>
-            Замовити послугу
-          </button>
-        </div>
-    </section> 
+      <div class="modal-section modals">
+        <h1 class="modals__page">Ефективні рішення для вашого бізнесу</h1>
+        <button class="modal-open-btn" type="button" data-modal-open>
+          Замовити послугу
+        </button>
+      </div>
+    </section>
     <section class="portfolio-section section">
       <div class="container skills">
         <h2 class="soft-skills visually-hidden">Наші особливості</h2>
@@ -150,16 +158,16 @@
         </ul>
       </div>
     </section>
-  <section class="page-job section">
+    <section class="page-job section">
       <div class="container">
         <h2 class="job">Чим ми займаємося</h2>
         <ul class="job-page list">
           <li class="job-page__item">
             <div class="work-text-box">
               <picture>
-                <source srcset="./images/desktop/image-job/job.jpg 1x, ./images/desktop/image-job/job-2@2x.jpg  2x"
-                media="(min-with: 1200px)">
-                <img class="work__image" src="./images/desktop/image-job/job.jpg" alt="design"/> 
+                <source srcset="./images2/main/laptop_desktop.jpg 1x, ./images2/main/laptop_desktop@2x.jpg  2x"
+                  media="(min-with: 1200px)">
+                <img class="work__image" src="./images2/main/laptop_desktop.jpg" alt="design" />
               </picture>
               <p class="work__title">Десктопні додатки</p>
             </div>
@@ -167,10 +175,9 @@
           <li class="job-page__item">
             <div class="work-text-box">
               <picture>
-                <source
-
-                />
-                <img class="work__image" src="./images/box-2.jpg" alt="styling"/>
+                <source srcset="./images2/main/phone_desktop.jpg 1x, ./images2/main/phone_desktop@2x.jpg  2x"
+                  media="(min-with: 1200px)">
+                <img class="work__image" src="./images2/main/phone_desktop.jpg" alt="styling" />
               </picture>
               <p class="work__title">Мобільні додатки</p>
             </div>
@@ -178,12 +185,11 @@
           <li class="job-page__item">
             <div class="work-text-box">
               <picture>
-                <source
-
-                />
-                <img class="work__image" src="./images/box-3.jpg" alt="color"/>  
+                <source srcset="./images2/main/tablet_desktop.jpg 1x, ./images2/main/tablet_desktop@2x.jpg  2x"
+                  media="(min-with: 1200px)" />
+                <img class="work__image" src="./images2/main/tablet_desktop.jpg" alt="color" />
               </picture>
-            
+
               <p class="work__title">Дизайнерські рішення</p>
             </div>
           </li>
@@ -196,18 +202,12 @@
         <ul class="list team__list">
           <li class="team__item">
             <picture>
-              <source
-              srcset="./images2/main/ihor_desktop.jpg 1x, ./images2/main/ihor_desktop@2x.jpg 2x"
-              media="(min-width:1200px)"
-              >
-              <source
-              srcset="./images2/main/ihor_tablet.jpg 1x, ./images2/main/ihor_tablet@2x.jpg 2x"
-              media="(min-width:768px)"
-              >
-              <source
-              srcset="./images2/main/ihor_mobile.jpg 1x, ./images2/main/ihor_mobile@2x.jpg 2x"
-              media="(max-width:767px)"
-              >
+              <source srcset="./images2/main/ihor_desktop.jpg 1x, ./images2/main/ihor_desktop@2x.jpg 2x"
+                media="(min-width:1200px)">
+              <source srcset="./images2/main/ihor_tablet.jpg 1x, ./images2/main/ihor_tablet@2x.jpg 2x"
+                media="(min-width:768px)">
+              <source srcset="./images2/main/ihor_mobile.jpg 1x, ./images2/main/ihor_mobile@2x.jpg 2x"
+                media="(max-width:767px)">
               <img class="team__image" src="./images2/main/ihor_mobile.jpg" alt="Ігор Дем'яненко" />
             </picture>
             <div class="team__info">
@@ -247,18 +247,12 @@
           </li>
           <li class="team__item">
             <picture>
-              <source
-              srcset="./images2/main/olga_desktop.jpg 1x, ./images2/main/olga_desktop@2x.jpg 2x"
-              media="(min-width:1200px)"
-              >
-              <source
-              srcset="./images2/main/olga_tablet.jpg 1x, ./images2/main/olga_tablet@2x.jpg 2x"
-              media="(min-width:768px)"
-              >
-              <source
-              srcset="./images2/main/olga_mobile.jpg 1x, ./images2/main/olga_mobile@2x.jpg 2x"
-              media="(max-width:767px)"
-              >
+              <source srcset="./images2/main/olga_desktop.jpg 1x, ./images2/main/olga_desktop@2x.jpg 2x"
+                media="(min-width:1200px)">
+              <source srcset="./images2/main/olga_tablet.jpg 1x, ./images2/main/olga_tablet@2x.jpg 2x"
+                media="(min-width:768px)">
+              <source srcset="./images2/main/olga_mobile.jpg 1x, ./images2/main/olga_mobile@2x.jpg 2x"
+                media="(max-width:767px)">
               <img class="team__image" src="./images2/main/olga_mobile.jpg" alt="Ольга Рєпіна" />
             </picture>
             <div class="team__info">
@@ -298,18 +292,12 @@
           </li>
           <li class="team__item">
             <picture>
-              <source
-              srcset="./images2/main/mykola_desktop.jpg 1x, ./images2/main/mykola_desktop@2x.jpg 2x"
-              media="(min-width:1200px)"
-              >
-              <source
-              srcset="./images2/main/mykola_tablet.jpg 1x, ./images2/main/mykola_tablet@2x.jpg 2x"
-              media="(min-width:768px)"
-              >
-              <source
-              srcset="./images2/main/mykola_mobile.jpg 1x, ./images2/main/mykola_mobile@2x.jpg 2x"
-              media="(max-width:767px)"
-              >
+              <source srcset="./images2/main/mykola_desktop.jpg 1x, ./images2/main/mykola_desktop@2x.jpg 2x"
+                media="(min-width:1200px)">
+              <source srcset="./images2/main/mykola_tablet.jpg 1x, ./images2/main/mykola_tablet@2x.jpg 2x"
+                media="(min-width:768px)">
+              <source srcset="./images2/main/mykola_mobile.jpg 1x, ./images2/main/mykola_mobile@2x.jpg 2x"
+                media="(max-width:767px)">
               <img class="team__image" src="./images2/main/mykola_mobile.jpg" alt="Микола Тарасов" />
             </picture>
             <div class="team__info">
@@ -349,18 +337,12 @@
           </li>
           <li class="team__item">
             <picture>
-              <source
-              srcset="./images2/main/myhailo_desktop.jpg 1x, ./images2/main/myhailo_desktop@2x.jpg 2x"
-              media="(min-width:1200px)"
-              >
-              <source
-              srcset="./images2/main/myhailo_tablet.jpg 1x, ./images2/main/myhailo_tablet@2x.jpg 2x"
-              media="(min-width:768px)"
-              >
-              <source
-              srcset="./images2/main/myhailo_mobile.jpg 1x, ./images2/main/myhailo_mobile@2x.jpg 2x"
-              media="(max-width:767px)"
-              >
+              <source srcset="./images2/main/myhailo_desktop.jpg 1x, ./images2/main/myhailo_desktop@2x.jpg 2x"
+                media="(min-width:1200px)">
+              <source srcset="./images2/main/myhailo_tablet.jpg 1x, ./images2/main/myhailo_tablet@2x.jpg 2x"
+                media="(min-width:768px)">
+              <source srcset="./images2/main/myhailo_mobile.jpg 1x, ./images2/main/myhailo_mobile@2x.jpg 2x"
+                media="(max-width:767px)">
               <img class="team__image" src="./images2/main/myhailo_mobile.jpg" alt="Михайло Єрмаков" />
             </picture>
             <div class="team__info">
@@ -461,7 +443,7 @@
           </li>
         </ul>
       </div>
-    </section> 
+    </section>
   </main>
   <footer class="footer-page">
     <div class="container footer-container">
@@ -519,17 +501,15 @@
         <p class="subscribe__title">Підпишіться на розсилку</p>
         <form class="subscribe-form">
           <div class="subscribe-form__box">
-              <label class="subscribe-form__field">
-                  <input type="text" class="subscribe-form__input" name="user-mail" placeholder="E-mail">          
-              </label>
-            </div>
-            <button type="submit" class="subscribe-form__submit">Підписатися
-              <svg class="subscribe-form__icon" width="24" height="24">
-                <use href="./symbol-defs.svg#icon-send"></use>
-              </svg>
-            </button>
-
-
+            <label class="subscribe-form__field">
+              <input type="text" class="subscribe-form__input" name="user-mail" placeholder="E-mail">
+            </label>
+          </div>
+          <button type="submit" class="subscribe-form__submit">Підписатися
+            <svg class="subscribe-form__icon" width="24" height="24">
+              <use href="./symbol-defs.svg#icon-send"></use>
+            </svg>
+          </button>
         </form>
       </div>
     </div>
